Fix e-mail test

--- a/email_test.html
+++ b/email_test.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <title>{{ stone.name }}</title>
+    <title>{{ store.name }}</title>
     <style type="text/css">
         p {
             font-family: "Lato", "Helvetica Neue", helvetica, sans-serif;
