New notifications status

--- a/acess_key.html
+++ b/acess_key.html
@@ -9,7 +9,7 @@
                         <td>
                             <a href="{{ URL_EMAIL }}" target="_blank" style="display: block;">
                                 <!-- IMAGEM DA LOGO -->
-                                <img src="{{ MEDIA_URL }}uploads/emails_transacionais/logo.png" alt="SixWine" />
+                                <img src="{{ MEDIA_URL }}uploads/emails_transacionais/logo.png" />
                             </a>
                         </td>
                     </tr>
