--- a/recover_password.html
+++ b/recover_password.html
@@ -26,32 +26,22 @@
                                 <tbody>
                                     <tr>
                                         <td align="left">
-                                            <strong>Olá, {{ name }}</strong>
+                                            <strong>Olá, {{ customer.customer }}</strong>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <!-- TEXTO PARA MODIFICAR -->
                                         <td align="left">
-                                            Informamos que o produto desejado está novamente disponível para compra.
+                                            Para redefinir sua senha clique no link abaixo e siga as instruções que estarão na tela.
                                         </td>
                                     </tr>
-                                </tbody>
-                            </table>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <table cellpadding="10" cellspacing="0" width="100%">
-                                <tbody>
-                                    <tr bgcolor="#f9f9f9">
-                                        <td style="vertical-align:middle">
-                                            <img src="{{ MEDIA_URL }}{{ sku.image_small }}" width="50" height="50" />
+                                    <tr>
+                                    	<td align="left">
+                                            <a href="{{ URL_EMAIL }}clientes/central/criar-senha/{{ token.0 }}-{{ token.1 }}" target="_blank" style="display: inline-block; background: #438ae1; color: #fff; padding: 5px; text-decoration: none; border-radius: 4px;">Redefinir senha</a>
                                         </td>
-                                        <td style="vertical-align:middle">
-                                            {{ sku }}
-                                        </td>
-                                        <td align="right" style="text-align:right;vertical-align:middle">
-                                            <a href="{{ URL_EMAIL }}{{ sku.product.get_absolute_url }}?utm_campaign=Avisi_me_quando_chegar&utm_medium=email" target="_blank" style="display: inline-block; background: #2b8421; color: #fff; padding: 5px; text-decoration: none; border-radius: 4px;">Visualizar</a>
+                                    </tr>
+                                    <tr>
+                                    	<td align="left">
+                                            Este link é válido por 24 horas, a partir de {{ tokenObj.datetime|date:"d/m/Y H:m" }}.
                                         </td>
                                     </tr>
                                 </tbody>
