--- a/email_test.html
+++ b/email_test.html
@@ -34,7 +34,7 @@
                             <tr>
                                 <td>
                                     <div style="border:1px solid #e3e4e6; border-radius:8px; margin-top:1rem; margin-bottom:1rem; padding:2rem;">
-                                        <img src="https://io.convertiez.com.br/m/storeconvertize/uploads/emails_transacionais/logo-e.png" style="display:block; outline:none; border:none; text-decoration:none;" >
+                                        <img src="{{ MEDIA_URL }}uploads/emails_transacionais/logo.png" style="display:block; outline:none; border:none; text-decoration:none;" >
                                         <p style="font-size:24px; margin-bottom:0px"><strong>Olá {{ user.email }}</strong></p>
                                         <p style="font-size:16px;">A configuração SMTP da sua loja foi configurada com sucesso.</p>
                                         <p style="margin-bottom:0px; font-size:16px; color:#3f3f40; margin-top:2rem;">Atenciosamente,</p>
