--- a/pay_billet.html
+++ b/pay_billet.html
@@ -26,32 +26,28 @@
                                 <tbody>
                                     <tr>
                                         <td align="left">
-                                            <strong>Olá, {{ name }}</strong>
+                                            <strong>Olá, {{ order.billing_detail_name }}</strong>
                                         </td>
                                     </tr>
                                     <tr>
                                         <!-- TEXTO PARA MODIFICAR -->
                                         <td align="left">
-                                            Informamos que o produto desejado está novamente disponível para compra.
+                                            Informamos que o pagamento referente ao seu pedido <strong>#{{ order.id }}</strong> está vencendo.
+											<br />
+                                            Caso o pagamento não seja realizado, o pedido será cancelado automaticamente.
                                         </td>
                                     </tr>
-                                </tbody>
-                            </table>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <table cellpadding="10" cellspacing="0" width="100%">
-                                <tbody>
-                                    <tr bgcolor="#f9f9f9">
-                                        <td style="vertical-align:middle">
-                                            <img src="{{ MEDIA_URL }}{{ sku.image_small }}" width="50" height="50" />
+                                    <tr>
+                                    	<td align="left">
+                                        	<a href="{{ URL_EMAIL }}{% url 'checkout_return' transaction.uuid %}" target="_blank" style="display: inline-block;background: #2b8421; color: #fff; padding: 10px; text-decoration: none; border-radius: 4px;">
+                                                <b>Imprimir Boleto</b>
+                                            </a>
                                         </td>
-                                        <td style="vertical-align:middle">
-                                            {{ sku }}
-                                        </td>
-                                        <td align="right" style="text-align:right;vertical-align:middle">
-                                            <a href="{{ URL_EMAIL }}{{ sku.product.get_absolute_url }}?utm_campaign=Avisi_me_quando_chegar&utm_medium=email" target="_blank" style="display: inline-block; background: #2b8421; color: #fff; padding: 5px; text-decoration: none; border-radius: 4px;">Visualizar</a>
+                                    </tr>
+                                    <tr>
+                                        <!-- TEXTO PARA MODIFICAR -->
+                                    	<td align="left">
+                                        	Se o pagamento já foi realizado, favor desconsiderar este e-mail.
                                         </td>
                                     </tr>
                                 </tbody>
