--- a/order_when_status_cep.html
+++ b/order_when_status_cep.html
@@ -14,7 +14,7 @@
                                 <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                                     <tbody>
                                         <tr>
-                                            <td align="left"><a href="{{ URL_EMAIL }}"><img alt="Drogal" src="{{ MEDIA_URL }}uploads/emails_transacionais/v2/logo.png" style="display:block"/></a></td>
+                                            <td align="left"><a href="{{ URL_EMAIL }}"><img src="{{ MEDIA_URL }}uploads/emails_transacionais/v2/logo.png" style="display:block"/></a></td>
                                         </tr>
                                     </tbody>
                                 </table>
